--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -11,7 +11,11 @@
   "description": "",
   "dependencies": {
     "backend": "file:",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "mssql": "^11.0.1",
+    "nodemon": "^3.1.9"
   }
 }
