--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,4 +1,9 @@
 DB_USER=sa
-DB_PASSWORD=1122
-DB_SERVER=DESKTOP-4M86PIU
-DB_NAME=CAR_RENTAL_SYSTEM
+DB_PASSWORD=Electrfying@22
+DB_SERVER=localhost
+DB_NAME=CarRentalSystem
+
+# DB_USER=sa
+# DB_PASSWORD=1122
+# DB_SERVER=DESKTOP-4M86PIU
+# DB_NAME=CarRentalSystem
