--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "ecdsa-sig-formatter": "^1.0.11",
     "express": "^4.21.2",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.9"
