--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,7 +1,7 @@
 DB_USER=sa
-DB_PASSWORD=Electrfying@22
-DB_SERVER=localhost
-DB_NAME=CarRentalSystem
+DB_PASSWORD=1122
+DB_SERVER=DESKTOP-4M86PIU
+DB_NAME=Car_Rental_System
 
 # DB_USER=sa
 # DB_PASSWORD=1122
