--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -17,6 +17,7 @@
     "ecdsa-sig-formatter": "^1.0.11",
     "express": "^4.21.2",
     "mssql": "^11.0.1",
+    "node": "^24.0.1",
     "nodemon": "^3.1.9"
   }
 }
