--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,9 +1,9 @@
-# DB_USER=sa
-# DB_PASSWORD=1122
-# DB_SERVER=DESKTOP-4M86PIU
-# DB_NAME=CAR_MANAGEMENT_SYSTEM
-
 DB_USER=sa
-DB_PASSWORD=Electrfying@22
-DB_SERVER=localhost
+DB_PASSWORD=1122
+DB_SERVER=DESKTOP-4M86PIU
 DB_NAME=CAR_MANAGEMENT_SYSTEM
+
+#DB_USER=sa
+#DB_PASSWORD=Electrfying@22
+#DB_SERVER=localhost
+#DB_NAME=CAR_MANAGEMENT_SYSTEM
